ws_t3/log/build_2026-07-15_11-40-27/t3_pose_estimation/stdout_stderr.log
CMake Deprecation Warning at CMakeLists.txt:1 (cmake_minimum_required):
  Compatibility with CMake < 3.10 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value.  Or, use the <min>...<max> syntax
  to tell CMake that the project requires at least <min> but has been updated
  to work with policies introduced by <max> or earlier.


-- The C compiler identification is GNU 11.4.0
-- The CXX compiler identification is GNU 11.4.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found ament_cmake: 1.3.14 (/opt/ros/humble/share/ament_cmake/cmake)
-- Found Python3: /usr/bin/python3 (found version "3.10.12") found components: Interpreter
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 16.0.19 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.8 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.8 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.8 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.10 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Found OpenSSL: /usr/lib/x86_64-linux-gnu/libcrypto.so (found version "3.0.2")
-- Found FastRTPS: /opt/ros/humble/include
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE
-- Found sensor_msgs: 4.9.1 (/opt/ros/humble/share/sensor_msgs/cmake)
-- Found nav_msgs: 4.9.1 (/opt/ros/humble/share/nav_msgs/cmake)
-- Found tf2_ros: 0.25.20 (/opt/ros/humble/share/tf2_ros/cmake)
-- Found cv_bridge: 3.2.1 (/opt/ros/humble/share/cv_bridge/cmake)
-- Found t3_interfaces: 0.1.0 (/home/el-system/Documents/T3/ws_t3/install/t3_interfaces/share/t3_interfaces/cmake)
-- Found OpenCV: /usr (found version "4.5.4") found components: core imgproc imgcodecs calib3d video
-- Found CURL: /usr/lib/x86_64-linux-gnu/libcurl.so (found version "7.81.0")
-- Found PkgConfig: /usr/bin/pkg-config (found version "0.29.2")
-- Checking for module 'jsoncpp'
--   Found jsoncpp, version 1.9.5
-- Configuring done (2.1s)
-- Generating done (0.0s)
-- Build files have been written to: /home/el-system/Documents/T3/ws_t3/build/t3_pose_estimation
[ 50%] Building CXX object CMakeFiles/pose_estimator_node.dir/src/pose_estimator_node.cpp.o
[ 50%] Building CXX object CMakeFiles/frame_client_node.dir/src/frame_client_node.cpp.o
/home/el-system/Documents/T3/ws_t3/src/t3_pose_estimation/src/pose_estimator_node.cpp: In member function ‘void PoseEstimatorNode::on_frame(t3_interfaces::msg::FrameInfo_<std::allocator<void> >::SharedPtr)’:
/home/el-system/Documents/T3/ws_t3/src/t3_pose_estimation/src/pose_estimator_node.cpp:138:12: error: invalid array assignment
  138 |         u_ = last_u_;
      |         ~~~^~~~~~~~~
/home/el-system/Documents/T3/ws_t3/src/t3_pose_estimation/src/pose_estimator_node.cpp:142:17: error: invalid array assignment
  142 |         last_u_ = u_;
      |         ~~~~~~~~^~~~
gmake[2]: *** [CMakeFiles/pose_estimator_node.dir/build.make:79: CMakeFiles/pose_estimator_node.dir/src/pose_estimator_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:188: CMakeFiles/pose_estimator_node.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
[ 75%] Linking CXX executable frame_client_node
[ 75%] Built target frame_client_node
gmake: *** [Makefile:146: all] Error 2
